Changelog
=========

7.6.dev0 - (unreleased)
-----------------------

7.5 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]
* Change: removed green gradient from popup-selected-items, we now use
  flat colors
  [ichimdav refs #27537]

7.4 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

7.3 - (2015-02-16)
------------------
* Change: cache forward and backward relations on relations macro
  since they are called also by the auto relations
  [ichimdav refs #21173]

7.2 - (2015-01-22)
------------------
* Bug fix: Fixed tests
  [avoinea]

7.1 - (2014-11-20)
------------------
* Change: Refactoring to speedup "broken relations algorithm" within Control Panel
  [voineali refs #21182]
* Change: Relations viewlet through Forward relations now searches for valid
  relationship with an extra check when checking the interfaces before ignoring
  the added relationship
  [ichimdav refs #20045]
* Feature: queryContentType can now search in a reverse fashion for the
  interface match. See categorizations.txt functional test for details
  [ichimdav refs #20045]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.relations
  [voineali refs #21182]
* Feature: Replace graphviz graph.png within Site Setup > Possibile relations
  with a more scalable visualisation solution based on Dracula JS Graph Library
  (see: http://www.graphdracula.net)
  [voineali refs #21182]

7.0 - (2014-08-12)
------------------
* Bug fix: Include i18n translations
  [avoinea]

6.9 - (2014-07-15)
------------------
* Bug fix: forward and background relations now return only one datatype